controllers
add tags, schemas, comments to controllers